--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header>
-        <h1>Online Store</h1>
+        <h1>DeWaySouvenirs</h1>
         <div class="cart">
             <span>Cart</span>
-            <span id="cart-count">0</span>
+            <span id="cart-count">Carret: 0 productes</span>
         </div>
     </header>
     
