--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     
     <section class="products">
         <div class="product">
-            <img src="https://via.placeholder.com/150" alt="Product 1">
+            <img src="https://images.app.goo.gl/fxr98FzELCVu2VpF8" alt="Custom T-Shirt">
             <h3>Product 1</h3>
-            <p>$10.00</p>
-            <button class="add-to-cart" data-price="10">Add to Cart</button>
+            <p>18.95€</p>
+            <button class="add-to-cart" data-price="18.95">Afegir</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/150" alt="Product 2">
